// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArticleBadge > ArticleBadge初期値(Category): badge > ダミータグ 1`] = `"ダミータグ"`;

exports[`ArticleBadge > ArticleBadge初期値(Category): badge 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        data-testid="targetBadgeLink"
        href="/tag-id/1/"
      >
        <div
          class="ArticleBadge_styles_common__1kkmc851 ArticleBadge_styles_category__1kkmc852"
        >
          <p
            class="ArticleBadge_styles_articleBadgeText__1kkmc855"
          >
            ダミータグ
          </p>
          <img
            alt="ダミータグの画像"
            class="BaseImg_styles_img__16raodk0 ArticleBadge_styles_articleBadgeImg__1kkmc854"
            src="https://placehold.jp/150x150.png"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      data-testid="targetBadgeLink"
      href="/tag-id/1/"
    >
      <div
        class="ArticleBadge_styles_common__1kkmc851 ArticleBadge_styles_category__1kkmc852"
      >
        <p
          class="ArticleBadge_styles_articleBadgeText__1kkmc855"
        >
          ダミータグ
        </p>
        <img
          alt="ダミータグの画像"
          class="BaseImg_styles_img__16raodk0 ArticleBadge_styles_articleBadgeImg__1kkmc854"
          src="https://placehold.jp/150x150.png"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ArticleBadge > ArticleBadge初期値(Tag): badge > ダミーカテゴリー 1`] = `"ダミーカテゴリー"`;

exports[`ArticleBadge > ArticleBadge初期値(Tag): badge 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        data-testid="targetBadgeLink"
        href="/category-id/1/"
      >
        <div
          class="ArticleBadge_styles_common__1kkmc851 ArticleBadge_styles_tag__1kkmc853"
        >
          <p
            class="ArticleBadge_styles_articleBadgeText__1kkmc855"
          >
            ダミーカテゴリー
          </p>
          <img
            alt="ダミーカテゴリーの画像"
            class="BaseImg_styles_img__16raodk0 ArticleBadge_styles_articleBadgeImg__1kkmc854"
            src="https://placehold.jp/150x150.png"
          />
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      data-testid="targetBadgeLink"
      href="/category-id/1/"
    >
      <div
        class="ArticleBadge_styles_common__1kkmc851 ArticleBadge_styles_tag__1kkmc853"
      >
        <p
          class="ArticleBadge_styles_articleBadgeText__1kkmc855"
        >
          ダミーカテゴリー
        </p>
        <img
          alt="ダミーカテゴリーの画像"
          class="BaseImg_styles_img__16raodk0 ArticleBadge_styles_articleBadgeImg__1kkmc854"
          src="https://placehold.jp/150x150.png"
        />
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
